# Solar-ROI-Prediction-and-Recommendation-System

./: .gitignore  DATA_SETUP.md  README.md  dashboard_styles.css  integrated_dashboard.py  main.py  main_integrated.py  pyproject.toml  requirements.txt
Electricity Consumption Forecasting & Tariff Integration Model/: Dockerfile  README.md  consumption_dashboard.py  data_quality.py  docker-compose.yml  main.py  styles.css
Electricity Consumption Forecasting & Tariff Integration Model/api/: fastapi_app.py
Electricity Consumption Forecasting & Tariff Integration Model/config/: config.yaml
Electricity Consumption Forecasting & Tariff Integration Model/features/: __init__.py  cyclical_encoder.py  feature_engineer.py  weather_integrator.py
Electricity Consumption Forecasting & Tariff Integration Model/models/: __init__.py  lstm_model.py
Electricity Consumption Forecasting & Tariff Integration Model/monitoring/: __init__.py  drift_detector.py
Geospatial Mapping & Transformer Suitability Model/: Comprehensive_app.py  MASTER_DATASET_ALL_10TRANSFORMERS.csv  app.py  index.html  requirements.txt  test01.py  test_models.py  test_suitability.py  transformer_assessment.py
Geospatial Mapping & Transformer Suitability Model/frontend/: index.html
Return of Investment, Payback and Risk-Aware Financial Model/: financeml.py  market_data.json  market_data.json.py  update_live_data.py
Solar Generation Forecasting Model/: config.yaml  data_pipeline.py  data_preparation.py  fetch_future_weather.py  model_trainer.py  predict.py
data_pipeline/: expand_data.py
shared/: models.py
(+65 files in other folders)
